# llm-interface-testbench

./: .air.toml  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  pyproject.toml  ruff.toml  sample.env
docker/: llama_cpp.Dockerfile  ollama.Dockerfile  tgi.Dockerfile  vllm.Dockerfile
llmit/: downloaders.py  removers.py
llmit/servers/: ollama.py  types.py
scripts/: ollama_startup.sh
